data/derived/sp14/progs/unify/prog3877.ml.out
Characters 29-46:
  log10 (int_of_float xs);;
        ^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         float
